drkns 28.12.2019 21:08:45 +0200 - build 5540

1. Показываем платформу и SCM revision в диалоге исключения.

drkns 27.12.2019 19:20:00 +0200 - build 5539

1. В диалоге иключения работает Ctrl+C.

drkns 27.12.2019 10:45:14 +0200 - build 5538

1. И еще раз продолжение 5534.

drkns 27.12.2019 02:56:14 +0200 - build 5537

1. Рефакторинг.

drkns 25.12.2019 13:19:27 +0200 - build 5536

1. Уточнение 5523.

drkns 24.12.2019 19:25:57 +0200 - build 5535

1. Продолжение 5534 - попробуем корректно обрабатывать всякие дивные случаи типа пустых меню или меню без рамок.

2. При отображении исключений показываем сначала наиболее глубокое.

3. Мелкий рефакторинг.

zg 24.12.2019 02:04:54 +0200 - build 5534

1. продолжение 5530.2: размер меню не может быть меньше 8x5.

drkns 23.12.2019 19:22:00 +0200 - build 5533

1. С форума: "Неожиданный текущий файл при запуске панели". Доисторический баг.

drkns 20.12.2019 18:58:10 +0000 - build 5532

1. С форума: Alt+<Gray +> не выделяет на панели файлы без расширения

drkns 20.12.2019 17:22:58 +0000 - build 5531

1. 0003758: Падение Фара при нажатии F3 на .. в панели плагина.

2. Уточнение 5530.2.

zg 20.12.2019 05:17:48 +0200 - build 5530

1. DM_RESIZEDIALOG: при указании размеров меньше 1 они считаются равными 1. аналогично 5267.

2. падение, если хоткей в меню оказывался за пределами меню.

drkns 18.12.2019 00:03:08 +0000 - build 5529

1. 0003757: Меню far:config входит в нерабочее состояние

drkns 16.12.2019 21:38:49 +0000 - build 5528

1. Открывая через API редактор с пустым именем файла можно было получить забавные результаты.
   Всё это шаманство с ?New File? - это плохо, очень плохо.

drkns 14.12.2019 23:03:49 +0000 - build 5527

1. 5524 - попытка №2, теперь с тестами.

2. Прочий рефакторинг.

drkns 12.12.2019 08:03:42 +0000 - build 5526

1. Частичный откат 5524.

drkns 11.12.2019 17:37:34 +0000 - build 5525

1. Уточнение 5524.

drkns 11.12.2019 01:29:03 +0000 - build 5524

1. Рефакторинг.

drkns 08.12.2019 23:12:53 +0000 - build 5523
