@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 29.12.2019 14:31:00 +0200 - build 5541
+
+1. Continuation of 5540.
+
 drkns 28.12.2019 21:08:45 +0200 - build 5540
 
 1. Show platform and SCM revision in Exception Dialog.
