@@ -1,3 +1,7 @@
+drkns 29.12.2019 14:31:00 +0200 - build 5541
+
+1. Продолжение 5540.
+
 drkns 28.12.2019 21:08:45 +0200 - build 5540
 
 1. Показываем платформу и SCM revision в диалоге исключения.
